# easm-rnd

./: .editorconfig  .env.example  .env.local  .gitattributes  .gitignore  .yamllint  CONTEXT_CHECKPOINT.md  CROSS-PLATFORM.md  DJANGO-API-README.md  Dockerfile  ENV-CONFIG.md  ENV_SETUP.md  QUICKSTART-CLI.md  README.md  README.md.backup  SCANNER_IMPLEMENTATION.md  SKAFFOLD-DOCKER-GUIDE.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  oiegowgerow  pyproject.toml  skaffold-api-only.yaml  skaffold-docker.yaml  skaffold-v1.yaml  skaffold-watch.ps1  skaffold.env  skaffold.env.example  skaffold.ps1  skaffold.sh  skaffold.yaml  skdev.ps1  skdev.sh  start-skaffold.ps1  start-skaffold.sh  test-cleanup.ps1  test_api.py  values-template.yaml  values.yaml
ansible/: playbook.yml  requirements.yml
cli/: README.md  (+3 more)
src/backend/: .env.example  .flake8  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  init-easm-user.sql  pyproject.toml  pytest.ini  requirements.txt  schema.yml  start-api.ps1  start-api.sh  wait-for-it.sh
src/backend/apps/api/: admin.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/backend/apps/api/scanner/: __init__.py  views.py
src/backend/apps/api/todo/: README.md  __init__.py  serializers.py  tests.py  urls.py  views.py
src/backend/apps/api/todos/: __init__.py  serializers.py  views.py
src/backend/apps/scanner/: API_List.md  __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/scanner/migrations/: 0001_initial.py  __init__.py
src/backend/apps/scanner/unused/: urls.py  views.py
src/backend/apps/todos/: admin.py  models.py  serializers.py  views.py
src/backend/apps/todos/management/commands/: README.md  clear_seed_data.py  seed_data.py
src/backend/config/: health.py  settings.py  urls.py  wsgi.py
src/backend/easm/: pyproject.toml  pytest.ini
src/backend/easm-core/: README.md  __init__.py
src/backend/easm/api/: apps.py
src/backend/easm/api/authentication/: __init__.py  serializers.py  views.py
src/backend/easm/api/example/: filters.py
src/backend/easm/apps/api/: __init__.py  apps.py  filters.py  pagination.py  tests.py  urls.py  views.py
src/backend/easm/apps/api/authentication/: serializers.py  urls.py  views.py
src/backend/easm/apps/api/example/: __init__.py  filters.py  serializers.py  urls.py  views.py
src/backend/easm/apps/api/scanner/: __init__.py  serializers.py  urls.py  views.py
src/backend/easm/apps/api/todos/: serializers.py
src/backend/easm/apps/asset/: README.md
src/backend/easm/apps/asset_discovery/: README.md  apps.py
src/backend/easm/apps/authentication/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/backend/easm/apps/authentication/management/commands/: create_superuser_with_profile.py
src/backend/easm/apps/authentication/migrations/: 0001_initial.py
src/backend/easm/apps/core/: apps.py  exceptions.py  permissions.py  utils.py
src/backend/easm/apps/example/: apps.py  filters.py  models.py  services.py  tasks.py
src/backend/easm/apps/example/management/commands/: clear_seed_data.py  quick_seed.py  seed_data.py
src/backend/easm/apps/example/migrations/: 0001_initial.py
src/backend/easm/apps/scanner/: README.md  admin.py  apps.py  db.py  engine.py  tests.py
src/backend/easm/apps/scanner/migrations/: README.md
src/backend/easm/apps/todos/: apps.py
src/backend/easm/apps/todos/api/: urls.py  views.py
src/backend/easm/apps/todos/management/commands/: clear_seed_data.py  seed_data.py
src/backend/easm/asset/: README.md  apps.py
src/backend/easm/auth/: apps.py  models.py  serializers.py  services.py  signals.py  views.py
src/backend/easm/auth/management/commands/: create_superuser_with_profile.py  manage_user.py
src/backend/easm/common/: __init__.py  constants.py  decorators.py  enums.py
src/backend/easm/config/: __init__.py  asgi.py  celery.py  health.py  settings.py  urls.py
src/backend/easm/config/settings/: __init__.py  base.py  development.py  production.py  testing.py
src/backend/easm/core/: __init__.py  apps.py  filters.py  middleware.py  models.py  pagination.py  response.py  validators.py
src/backend/easm/example/: README.md  admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  views.py
src/backend/easm/example/management/commands/: clear_seed_data.py  seed_data.py
src/backend/k8s/: deployment.yaml
src/cli/easm-cli/: .gitignore  README.md  cli.py  easm.bat  easm.py  install.ps1  install.sh  pyproject.toml
src/cli/easm-cli/commands/: config.py  db.py  deploy.py  dev.py  docker.py  k8s.py  scan.py
src/cli/easm-cli/utils/: env.py  output.py
(+201 files in other folders)
