[tool.poetry]
name = "easm-api"
version = "1.0.0-dev"
description = "EASM REST API"
authors = ["Thinh Huynh-Doan <thinh.huynh@secpod.com>"]
readme = "README.md"
package-mode = false

# Updated: 2025-11-21 - Python 3.14, Django 5.2 LTS, Redis 8+ compatibility
[tool.poetry.dependencies]
python = "^3.14"
django = "^5.2"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.3"
psycopg2-binary = "^2.9"
redis = "^5.2"
django-redis = "^5.4"
django-cors-headers = "^4.6"
python-decouple = "^3.8"
gunicorn = "^23.0"
drf-spectacular = "^0.28"
django-filter = "^24.3"
pymongo = "^4.10"
dnspython = "^2.7"

[tool.poetry.group.dev.dependencies]
black = "^24.1"
flake8 = "^7.0"
pytest = "^7.4"
pytest-django = "^4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
